# LightFieldVRViewer

./: .gitignore  Cargo.toml  README.md  VrViewer.nsight-gfxproj  settings.conf
data/new_shot_01/: gt_depth_lowres.pfm  gt_depth_lowres_Cam000.pfm  gt_depth_lowres_Cam001.pfm  gt_depth_lowres_Cam002.pfm  gt_depth_lowres_Cam003.pfm  gt_depth_lowres_Cam004.pfm  gt_depth_lowres_Cam005.pfm  gt_depth_lowres_Cam006.pfm  gt_depth_lowres_Cam007.pfm  gt_depth_lowres_Cam008.pfm  gt_depth_lowres_Cam009.pfm  gt_depth_lowres_Cam010.pfm  gt_depth_lowres_Cam011.pfm  gt_depth_lowres_Cam012.pfm  gt_depth_lowres_Cam013.pfm  gt_depth_lowres_Cam014.pfm  gt_depth_lowres_Cam015.pfm  gt_depth_lowres_Cam016.pfm  gt_depth_lowres_Cam017.pfm  gt_depth_lowres_Cam018.pfm  gt_depth_lowres_Cam019.pfm  gt_depth_lowres_Cam020.pfm  gt_depth_lowres_Cam021.pfm  gt_depth_lowres_Cam022.pfm  gt_depth_lowres_Cam023.pfm  gt_depth_lowres_Cam024.pfm  gt_depth_lowres_Cam025.pfm  gt_depth_lowres_Cam026.pfm  gt_depth_lowres_Cam027.pfm  gt_depth_lowres_Cam028.pfm  gt_depth_lowres_Cam029.pfm  (+132 more)
shader/: closesthit.rchit  closesthit.rchit.spv  feet.frag  feet.frag.spv  feet.vert  feet.vert.spv  line.frag  line.frag.spv  line.vert  line.vert.spv  miss.rmiss.spv  miss_transp_check.rmiss  miss_transp_check.rmiss.spv  quad.frag  quad.frag.spv  quad.vert  quad.vert.spv  raygen.rgen  raygen.rgen.spv  transp_check.rahit  transp_check.rahit.spv
src/: debug.rs  error.rs  example_object.rs  feet_renderer.rs  interpolation.rs  light_field.rs  light_field_frustum.rs  light_field_viewer.rs  main.rs  rasterizer.rs  view_emulator.rs
(+844 files in other folders)
