[package]
name = "light_field_vr_viewer"
version = "0.1.0"
authors = ["hodasemi <michaelh.95@t-online.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
context = { git = "https://github.com/hodasemi/Context.git", features = ["openxr"] }